# near-api-examples

./: .gitignore  README.md
javascript/: package.json  pnpm-lock.yaml
javascript/examples/: account-details.js  authentication.js  batch-actions.js  contract-interaction.js  create-account-from-seed.js  create-account.js  create-subaccount.js  create-tla.js  delete-account.js  deploy-contract.js  deploy-global-contract-by-account.js  deploy-global-contract-by-hash.js  keys.js  manual-sign.js  rpc-failover.js  seat-price.js  send-tokens.js  simultaneous-transactions.js  tokens-balance.js  typed-contract-interaction.js  utils.js  verify-signature.js
near-api-js/: package.json  tsconfig.json
near-api-js/examples/: account-details.ts  batch-actions.js  batch-actions.ts  contract-interaction.js  contract-interaction.ts  create-account-from-seed.js  create-account-from-seed.ts  create-subaccount.js  create-subaccount.ts  create-tla.js  create-tla.ts  delete-account.js  delete-account.ts  deploy-contract.js  deploy-contract.ts  deploy-global-contract-by-account.js  keys.js  (+26 more)
near-kit/: package.json  tsconfig.json
rust/: Cargo.toml
rust/examples/: account_details.rs  batch_actions.rs  contract_interaction.rs  create_account.rs  create_account_from_seed.rs  custom_rpc.rs  delete_account.rs  global_contract_accountid.rs  global_contract_hash.rs  keys.rs  rpc_auth.rs  send_tokens.rs  simultaneous_transactions.rs  utils.rs
rust/examples/signer_options/: credentials_directory.rs  credentials_file.rs  keystore.rs  private_key_string.rs  seed_phrase.rs
rust/src/: lib.rs
(+38 files in other folders)
