[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
near-api = "0.3.0"
near-crypto = "0.27.0"
near-primitives = "0.27.0"
serde_json = "1.0.133"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15.0"
rand = "0.8.5"

[[example]]
name = "private_key_string"
path = "examples/signer_options/private_key_string.rs"

[[example]]
name = "credentials_directory"
path = "examples/signer_options/credentials_directory.rs"

[[example]]
name = "credentials_file"
path = "examples/signer_options/credentials_file.rs"

[[example]]
name = "keystore"
path = "examples/signer_options/keystore.rs"

[[example]]
name = "seed_phrase"
path = "examples/signer_options/seed_phrase.rs"
