[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
near-api = "0.6.1"
near-crypto = "0.30.3"
near-primitives = "0.30.3"
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"

[[example]]
name = "private_key_string"
path = "examples/signer_options/private_key_string.rs"

[[example]]
name = "credentials_directory"
path = "examples/signer_options/credentials_directory.rs"

[[example]]
name = "credentials_file"
path = "examples/signer_options/credentials_file.rs"

[[example]]
name = "keystore"
path = "examples/signer_options/keystore.rs"

[[example]]
name = "seed_phrase"
path = "examples/signer_options/seed_phrase.rs"
